--- a/views/content_aside.jade
+++ b/views/content_aside.jade
@@ -10,90 +10,86 @@ aside
               li
                 a(href='/async_io') 异步I/O
               li
-                a 异步编程
+                a(href='/async_program') 异步编程
               li
-                a(href='#/net_program') 网络编程
+                a(href='/net_program') 网络编程
               li
-                a(href='#/buffer') Buffer
+                a(href='/buffer') Buffer
               li
-                a(href='#') 内存控制
+                a(href='/memory_control') 内存控制
           li
             .link
               | Javascript
               span.glyphicon.glyphicon-chevron-down
             ul.submenu
               li
-                a(href='#') 浏览器兼容
+                a(href='/browser_compat') 浏览器兼容
               li
-                a(href='#') 性能优化
+                a(href='/optimize') 性能优化
               li
-                a(href='#') 继承
+                a(href='/inherit') 继承
               li
-                a(href='#') 闭包
+                a(href='/closure') 闭包
               li
-                a(href='#') 作用域
+                a(href='/scope') 作用域
               li
-                a(href='#') Ajax
+                a(href='/ajax') Ajax
               li
-                a(href='#') JSON
+                a(href='/json') JSON
               li
-                a(href='#') 模块化
-              li
-                a(href='#') ES6
+                a(href='/modularity') 模块化
           li
             .link
               | CSS3
               span.glyphicon.glyphicon-chevron-down
             ul.submenu
               li
-                a(href='#') 动画
+                a(href='/animate') 动画
               li
-                a(href='#') 绘图技巧
+                a(href='/cssdraw') 绘图技巧
               li
-                a(href='#') CSS3兼容性
+                a(href='/css3_compat') CSS3兼容性
           li
             .link
               | Web其他
               span.glyphicon.glyphicon-chevron-down
             ul.submenu
               li
-                a(href='#') HTTP指南
+                a(href='/guide_http') HTTP指南
               li
-                a(href='#') Web安全
+                a(href='/web_safe') Web安全
               li
-                a(href='#') SEO
+                a(href='/seo') SEO
           li
             .link
               | 摄影精选
               span.glyphicon.glyphicon-chevron-down
             ul.submenu
               li
-                a(href='#') 器材选购
+                a(href='/select_equip') 器材选购
               li
-                a(href='#') 初级摄影
+                a(href='/shoot_primer') 初级摄影
               li
-                a(href='#') 摄影进阶
+                a(href='/shoot_advance') 摄影进阶
               li
-                a(href='#') 后期
+                a(href='/better_pic') 后期
           li
             .link
               | 热门电子
               span.glyphicon.glyphicon-chevron-down
             ul.submenu
               li
-                a(href='#') 手机
+                a(href='/phone') 手机
               li
-                a(href='#') 电脑
-              li
-                a(href='#') 平板
+                a(href='/computer') 电脑
           li
             .link
               | Talk-NBA
               span.glyphicon.glyphicon-chevron-down
             ul.submenu
               li
-                a(href='#') 克村
+                a(href='/cleveland') 克村
               li
-                a(href='#') 加州之强
+                a(href='/golden_state') 加州之强
               li
-                a(href='#') final-storys
+                a(href='/final_storys') final-storys
